--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^11.2.1",
     "ffmpeg-binaries": "^3.2.2-3",
+    "mongoose": "^4.12.2",
     "request": "^2.83.0",
     "ytdl-core": "^0.17.1"
   }
