--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "dotenv": "^4.0.0",
     "ffmpeg-binaries": "^3.2.2-3",
     "mongoose": "^4.12.2",
     "request": "^2.83.0",
